--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "@react-native-community/netinfo": "^9.3.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "amazon-cognito-identity-js": "^5.2.12",
+    "aws-amplify": "^4.3.41",
+    "aws-amplify-react-native": "^6.0.5",
     "dayjs": "^1.11.6",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
